made some SEO changes

--- a/index.html
+++ b/index.html
@@ -2,10 +2,94 @@
 <html lang="en">
 
 <head>
+    <!-- Essential Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <!-- Primary Meta Tags -->
+    <title>Rishabh Singh - Data Scientist | ML Engineer | IIT Madras</title>
+    <meta name="title" content="Rishabh Singh - Data Scientist | ML Engineer | IIT Madras">
+    <meta name="description"
+        content="IIT Madras Data Scientist specializing in ML, system design & full-stack development. Building AI solutions, Flask apps & scalable architectures.">
+    <meta name="keywords"
+        content="Rishabh Singh, Data Scientist, Machine Learning, ML Engineer, AI Engineer, IIT Madras, Python Developer, System Architect, Full-stack Developer, Flask, Django, PyTorch, AI Architecture, System Design, Backend Development, India">
+    <meta name="author" content="Rishabh Singh">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://rishabhsingh.me/">
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rishabhsingh.me/">
+    <meta property="og:title" content="Rishabh Singh - Data Scientist | ML Engineer | IIT Madras">
+    <meta property="og:description"
+        content="IIT Madras Data Scientist specializing in ML, system design & full-stack development. Building AI solutions, Flask apps & scalable architectures.">
+    <meta property="og:image" content="https://rishabhsingh.me/images/me.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Rishabh Singh - Data Scientist Portfolio">
+    <meta property="og:site_name" content="Rishabh Singh Portfolio">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://rishabhsingh.me/">
+    <meta name="twitter:title" content="Rishabh Singh - Data Scientist | ML Engineer | IIT Madras">
+    <meta name="twitter:description"
+        content="IIT Madras Data Scientist specializing in ML, system design & full-stack development. Building AI solutions, Flask apps & scalable architectures.">
+    <meta name="twitter:image" content="https://rishabhsingh.me/images/me.png">
+    <meta name="twitter:image:alt" content="Rishabh Singh - Data Scientist Portfolio">
+    <meta name="twitter:creator" content="@rishabhsingh">
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="theme-color" content="#0b4975">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Rishabh Singh">
+
+    <!-- Geographic Meta Tags -->
+    <meta name="geo.region" content="IN">
+    <meta name="geo.placename" content="India">
+
+    <!-- Structured Data (JSON-LD) for Rich Results -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Rishabh Singh",
+      "url": "https://rishabhsingh.me",
+      "image": "https://rishabhsingh.me/images/me.png",
+      "jobTitle": "Data Scientist",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Chryselys"
+      },
+      "alumniOf": {
+        "@type": "EducationalOrganization",
+        "name": "Indian Institute of Technology Madras",
+        "sameAs": "https://www.iitm.ac.in/"
+      },
+      "knowsAbout": ["Data Science", "Machine Learning", "Python", "System Architecture", "Flask", "Django", "PyTorch", "AI Engineering", "Backend Development"],
+      "sameAs": [
+        "https://www.linkedin.com/in/rishabh11336/",
+        "https://github.com/rishabh11336",
+        "https://medium.com/@asusrishabh"
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Delhi",
+        "addressCountry": "IN"
+      },
+      "description": "Data Scientist and ML Engineer specializing in machine learning, system design, and full-stack development. Graduate from IIT Madras with expertise in Python, Flask, Django, and AI architecture."
+    }
+    </script>
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/skins/color-4.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -13,11 +97,16 @@
     <link rel="stylesheet" href="css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
     <link rel="stylesheet" href="css/skins/color-3.css" class="alternate-style" title="color-3" disabled>
     <link rel="stylesheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
-
     <link rel="stylesheet" href="css/style-switcher.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="images/Logo.svg">
+    <link rel="apple-touch-icon" href="images/Logo.svg">
+
+    <!-- Preconnect for Performance -->
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
 
 </head>
 
