added open source contribution section to portfolio

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <link rel="stylesheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
     <link rel="stylesheet" href="css/style-switcher.css">
     <link rel="stylesheet" href="css/lazy-skeleton.css">
+    <link rel="stylesheet" href="css/opensource.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="images/Logo.svg">
@@ -129,6 +130,7 @@
                 <li><a href="#about" class="nav-item"><i class="fa fa-user"></i>About</a></li>
                 <li><a href="#services" class="nav-item"><i class="fa fa-list"></i>Services</a></li>
                 <li><a href="#portfolio" class="nav-item"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#opensource" class="nav-item"><i class="fa fa-code-branch"></i>Open Source</a></li>
                 <li><a href="#contact" class="nav-item"><i class="fa fa-comments"></i>Contact</a></li>
                 <li><a href="#visitors" class="nav-item"><i class="fa fa-globe"></i>Visitors</a></li>
             </ul>
@@ -385,6 +387,23 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Open Source Contributions Section - Lazy Loaded -->
+            <section class="opensource section lazy-section" id="opensource" data-src="sections/opensource.html">
+                <div class="container">
+                    <div class="section-skeleton">
+                        <div class="skeleton-title"></div>
+                        <div class="skeleton-subtitle"></div>
+                        <div class="skeleton-grid">
+                            <div class="skeleton-card skeleton-opensource"></div>
+                            <div class="skeleton-card skeleton-opensource"></div>
+                            <div class="skeleton-card skeleton-opensource"></div>
+                            <div class="skeleton-card skeleton-opensource"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <section class="contact section" id="contact">
                 <div class="container">
                     <div class="row">
@@ -397,7 +416,7 @@
                     <ul class="contact-info-list row">
                         <li class="contact-info-item padd-15">
                             <div class="icon">
-                                <a href="mailto:rishabh11336@gmail.com"><i class="fa fa-solid fa-envelope"></i></a>
+                                <a href="mailto:asusrishabh@outlook.com"><i class="fa fa-solid fa-envelope"></i></a>
                             </div>
                             <h4>Email</h4>
                         </li>
