feat: improved design consistency, fixed icons, renamed portfolio to projects

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <li><a href="#home" class="nav-item active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about" class="nav-item"><i class="fa fa-user"></i>About</a></li>
                 <li><a href="#services" class="nav-item"><i class="fa fa-list"></i>Services</a></li>
-                <li><a href="#portfolio" class="nav-item"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#portfolio" class="nav-item"><i class="fa fa-briefcase"></i>Projects</a></li>
                 <li><a href="#opensource" class="nav-item"><i class="fa fa-code-branch"></i>Open Source</a></li>
                 <li><a href="#contact" class="nav-item"><i class="fa fa-comments"></i>Contact</a></li>
                 <li><a href="#visitors" class="nav-item"><i class="fa fa-globe"></i>Visitors</a></li>
@@ -373,8 +373,8 @@
                 </div>
             </section>
 
-            <!-- Portfolio Section - Lazy Loaded -->
-            <section class="portfolio section lazy-section" id="portfolio" data-src="sections/portfolio.html">
+            <!-- Projects Section - Lazy Loaded -->
+            <section class="portfolio section lazy-section" id="portfolio" data-src="sections/projects.html">
                 <div class="container">
                     <div class="section-skeleton">
                         <div class="skeleton-title"></div>
