--- a/sections/opensource.html
+++ b/sections/opensource.html
@@ -17,14 +17,15 @@
                     <div class="opensource-logo">
                         <a href="https://github.com/conda/conda-build/pull/4782" target="_blank"
                             rel="noopener noreferrer">
-                            <img src="https://anaconda.org/static/img/anaconda_org_logo.svg" alt="Conda"
-                                title="Conda Build Contribution" loading="lazy" decoding="async">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Conda_logo.svg" alt="Conda"
+                                title="Conda Build Contribution" loading="lazy" decoding="async"
+                                style="max-width: 90%; max-height: 90%; object-fit: contain;">
                         </a>
                     </div>
                     <div class="opensource-info">
                         <h4>Conda Build</h4>
                         <p class="contribution-description">
-                            Contributed to Conda package management improvements, enhancing the Anaconda ecosystem
+                            Package management improvements enhancing the Anaconda ecosystem
                         </p>
                         <div class="contribution-meta">
                             <span class="pr-badge">
@@ -36,7 +37,7 @@
                         </div>
                         <a href="https://github.com/conda/conda-build/pull/4782" class="view-pr-btn" target="_blank"
                             rel="noopener noreferrer">
-                            View Pull Request <i class="fa fa-external-link-alt"></i>
+                            View PR <i class="fa fa-external-link-alt"></i>
                         </a>
                     </div>
                 </div>
@@ -55,7 +56,7 @@
                     <div class="opensource-info">
                         <h4>Python (CPython)</h4>
                         <p class="contribution-description">
-                            Core Python language contributions to the official CPython implementation
+                            Core contributions to Python's official implementation
                         </p>
                         <div class="contribution-meta">
                             <span class="pr-badge">
@@ -67,7 +68,7 @@
                         </div>
                         <a href="https://github.com/python/cpython/pull/134804" class="view-pr-btn" target="_blank"
                             rel="noopener noreferrer">
-                            View Pull Request <i class="fa fa-external-link-alt"></i>
+                            View PR <i class="fa fa-external-link-alt"></i>
                         </a>
                     </div>
                 </div>
@@ -85,7 +86,7 @@
                     <div class="opensource-info">
                         <h4>Applied ML Course</h4>
                         <p class="contribution-description">
-                            Educational content improvements for Machine Learning learning resources
+                            Educational content improvements for ML learning resources
                         </p>
                         <div class="contribution-meta">
                             <span class="pr-badge">
@@ -97,7 +98,7 @@
                         </div>
                         <a href="https://github.com/moshesipper/Applied-Machine-Learning-Course/pull/1"
                             class="view-pr-btn" target="_blank" rel="noopener noreferrer">
-                            View Pull Request <i class="fa fa-external-link-alt"></i>
+                            View PR <i class="fa fa-external-link-alt"></i>
                         </a>
                     </div>
                 </div>
@@ -110,13 +111,14 @@
                         <a href="https://github.com/kdmdelhincr/events/pull/4" target="_blank"
                             rel="noopener noreferrer">
                             <img src="https://github.com/user-attachments/assets/44d15235-8728-4aee-9927-119c1b6cc563"
-                                alt="KDM Delhi" title="KDM Delhi Events Contribution" loading="lazy" decoding="async">
+                                alt="KDM Delhi" title="KDM Delhi Events Contribution" loading="lazy" decoding="async"
+                                style="max-width: 50%; max-height: 50%; object-fit: contain;">
                         </a>
                     </div>
                     <div class="opensource-info">
                         <h4>KDM Delhi Events</h4>
                         <p class="contribution-description">
-                            Contributing to local tech community initiatives and event management
+                            Contributing to local tech community initiatives
                         </p>
                         <div class="contribution-meta">
                             <span class="pr-badge">
@@ -128,7 +130,7 @@
                         </div>
                         <a href="https://github.com/kdmdelhincr/events/pull/4" class="view-pr-btn" target="_blank"
                             rel="noopener noreferrer">
-                            View Pull Request <i class="fa fa-external-link-alt"></i>
+                            View PR <i class="fa fa-external-link-alt"></i>
                         </a>
                     </div>
                 </div>
