--- a/sections/projects.html
+++ b/sections/projects.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="row">
         <div class="section-title padd-15">
-            <h2>Portfolio</h2>
+            <h2>Projects</h2>
         </div>
     </div>
     <div class="row">
         <div class="portfolio-heading padd-15">
-            <h2>My Last Projects :</h2>
+            <h2>Featured Projects</h2>
         </div>
     </div>
     <div class="row">
