--- a/sections/projects.html
+++ b/sections/projects.html
@@ -30,7 +30,7 @@
                         </div>
                         <p>Advanced parking management system modern Technology</p>
                         <div class="portfolio-links">
-                            <a href="https://parking.rishabhsingh.me" target="_blank"><i class="fa fa-github"></i></a>
+                            <a href="https://github.com/rishabh11336" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://parking.rishabhsingh.me" target="_blank" class="live-demo"><i
                                     class="fa fa-link"></i></a>
                         </div>
@@ -59,7 +59,7 @@
                             Flask, HTML, CSS, and JavaScript.</p>
                         <div class="portfolio-links">
                             <a href="https://github.com/rishabh11336/Blogsite.git" target="_blank"><i
-                                    class="fa fa-github"></i></a>
+                                    class="fab fa-github"></i></a>
                             <a href="https://compass.rishabhsingh.me" class="live-demo" target="_blank"><i
                                     class="fa fa-link"></i></a>
                         </div>
@@ -74,19 +74,20 @@
                             alt="Dashboard" loading="lazy" decoding="async">
                     </div>
                     <div class="portfolio-info">
-                        <h4>coming soon...</h4>
+                        <h4>Coming Soon</h4>
                         <div class="portfolio-tags">
+                            <span class="tag">PyTorch</span>
+                            <span class="tag">TensorFlow</span>
+                            <span class="tag">Python</span>
+                            <span class="tag">CNN</span>
+                            <span class="tag">Azure</span>
                             <span class="tag">ML</span>
-                            <span class="tag">SQL</span>
-                            <span class="tag">DL</span>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laborum est
-                            praesentium dignissimos consequuntur fuga alias impedit eligendi similique.
-                            Vel consectetur accusamus possimus molestiae sapiente dolores ullam,
-                            voluptatibus maiores modi.</p>
+                        <p>An exciting new project combining machine learning and deep learning technologies. Stay tuned
+                            for updates!</p>
                         <div class="portfolio-links">
                             <a href="https://github.com/rishabh11336/analytics-dashboard" target="_blank"><i
-                                    class="fa fa-github"></i></a>
+                                    class="fab fa-github"></i></a>
                             <a href="#" class="live-demo"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
