Refine portfolio design: uniform 512px card heights and improved Projects section
- Fixed all project cards to uniform 512px height matching Open Source section
- Reduced image height to 180px for more compact design
- Added line-clamp to descriptions for consistent text overflow
- Fixed GitHub icons (fa -> fab) for correct Font Awesome 6 rendering
- Balanced tag counts across all project cards (6 tags each)
- Capitalized 'Coming Soon' title for consistency
- Replaced Lorem Ipsum with professional project description
- Compacted spacing and padding throughout for cleaner aesthetic
- Updated hero section title to highlight credentials

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
-                            <h3 class="hello">Hey there! I'm <span class="name">Rishabh Singh</span></h3>
+                            <h3 class="hello">Data Scientist | AI Engineer | IIT Madras</h3>
                             <h3 class="my-profission">I'm all about that <span class="typing">Data Science</span> magic!
                             </h3>
                             <!-- <h3 class="my-profession">I'm a <span class="typing">Back-end Developer</span></h3> -->
