Improve accessibility: add alt text and aria-labels
- Added descriptive alt attribute to logo image for screen readers
- Added aria-label to logo link for better navigation
- Added aria-labels to all contact icon links (email, LinkedIn, Medium)
- Added standard line-clamp property alongside webkit prefix for compatibility
- Fixes accessibility audit issues for screen reader users

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 
         <div class="aside">
             <div class="logo">
-                <a href="#"><img src="images/Logo.svg" width="300"></a>
+                <a href="#" aria-label="Rishabh Singh Portfolio Home"><img src="images/Logo.svg" width="300"
+                        alt="Rishabh Singh - Data Scientist Portfolio Logo"></a>
             </div>
 
             <div class="nav-toggler">
@@ -416,7 +417,9 @@
                     <ul class="contact-info-list row">
                         <li class="contact-info-item padd-15">
                             <div class="icon">
-                                <a href="mailto:asusrishabh@outlook.com"><i class="fa fa-solid fa-envelope"></i></a>
+                                <a href="mailto:asusrishabh@outlook.com"
+                                    aria-label="Send email to asusrishabh@outlook.com"><i
+                                        class="fa fa-solid fa-envelope"></i></a>
                             </div>
                             <h4>Email</h4>
                         </li>
@@ -429,14 +432,16 @@
                         </li>
                         <li class="contact-info-item padd-15">
                             <div class="icon">
-                                <a href="https://www.linkedin.com/in/rishabh11336/" target="_blank"><i
+                                <a href="https://www.linkedin.com/in/rishabh11336/" target="_blank"
+                                    aria-label="Visit Rishabh Singh's LinkedIn profile"><i
                                         class="fa fa-brands fa-linkedin"></i></a>
                             </div>
                             <h4>Linkedin</h4>
                         </li>
                         <li class="contact-info-item padd-15">
                             <div class="icon">
-                                <a href="https://medium.com/@asusrishabh" target="_blank"><i
+                                <a href="https://medium.com/@asusrishabh" target="_blank"
+                                    aria-label="Read Rishabh Singh's articles on Medium"><i
                                         class="fa fa-brands fa-medium"></i></a>
                             </div>
                             <h4>Medium</h4>
