Remove unused files: tracking-solution.html and styles.css
- Deleted tracking-solution.html (reference file, implementation already applied)
- Deleted styles.css (orphaned CSS file, not linked in index.html)
- Verified no references to these files exist in codebase
- All active CSS files in css/ directory are retained and functional

--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
 
 <body class="dark">
 
+    <!-- Invisible tracking beacon - fires immediately on page load -->
+    <img src="https://mapmyvisitors.com/map.png?cl=0e1633&w=1&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY&co=0b4975&ct=cdd4d9"
+        alt="" width="1" height="1" style="position:absolute;left:-9999px;top:0;pointer-events:none;"
+        aria-hidden="true">
+
     <div class="main-container">
 
         <div class="aside">
