Add Librosa open source contribution with closed status badge and alignment fixes

--- a/sections/opensource.html
+++ b/sections/opensource.html
@@ -135,6 +135,41 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Contribution 5: Librosa -->
+            <div class="opensource-item">
+                <div class="opensource-item-inner shadow-dark">
+                    <div class="opensource-logo">
+                        <a href="https://github.com/librosa/librosa/pull/1850" target="_blank"
+                            rel="noopener noreferrer">
+                            <img src="https://avatars.githubusercontent.com/u/18124827?s=200&v=4" alt="Librosa"
+                                title="Librosa Documentation Contribution" loading="lazy" decoding="async"
+                                style="max-width: 50%; max-height: 50%; object-fit: contain;">
+                        </a>
+                    </div>
+                    <div class="opensource-info">
+                        <h4>Librosa</h4>
+                        <p class="contribution-description">
+                            Documentation improvement fixing broken SciPy conference paper links
+                        </p>
+                        <div class="contribution-meta">
+                            <span class="pr-badge">
+                                <i class="fa fa-code-branch"></i> PR #1850
+                            </span>
+                            <span class="status-badge closed">
+                                <i class="fa fa-times-circle"></i> Closed
+                            </span>
+                        </div>
+                        <p class="pr-note">
+                            <i class="fa fa-info-circle"></i> Awaiting stable SciPy proceedings URL
+                        </p>
+                        <a href="https://github.com/librosa/librosa/pull/1850" class="view-pr-btn" target="_blank"
+                            rel="noopener noreferrer">
+                            View PR <i class="fa fa-external-link-alt"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
